# content-automation-pipeline

./: .bandit  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  FIXES_SUMMARY.md  LICENSE  NUMPY_FIX_README.md  QUICK_START.md  README.md  REFACTOR_COMPLETE.md  SETUP_COMPLETE.md  START_HERE.md  STEP_BY_STEP.txt  TESTING_SUMMARY.md  __init__.py  alembic.ini  container.py  docker-compose.prod.yml  docker-compose.yml  locustfile.py  pyproject.toml  requirements.txt  security.py  setup_arm64_env.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_add_task_results_table_for_audit_trail.py
api/: dependencies.py  exceptions.py  main.py  schemas.py
api/routes/: auth.py  content.py  projects.py  system.py
config/: constants.py  settings.py
core/: enums.py  exceptions.py  models.py
docs/: CODE_QUALITY.md  DEPLOYMENT.md
execution/: content_generator.py  content_planner.py  distributer.py  keyword_researcher.py
infrastructure/: database.py  llm_client.py  monitoring.py  redis_client.py  schema.py
intelligence/: best_practices_kb.py  context_synthesizer.py  decision_engine.py  quality_evaluator.py  semantic_analyzer.py
knowledge/: article_repository.py  pattern_extractor.py  project_repository.py  rulebook_manager.py  user_repository.py  website_analyzer.py
optimization/: cache_manager.py  model_router.py  prompt_compressor.py  query_cache.py  token_budget_manager.py
orchestration/: celery_app.py  content_agent.py  task_persistence.py  task_queue.py  tasks.py
scripts/: benchmark.py  edge_case_scanner.py  run_production_audit.py  seed_best_practices.py  setup_database.py  verify_refactoring.py
services/: content_service.py  project_service.py  user_service.py
tests/: conftest.py  phase5_validation.py
tests/integration/: test_caching.py  test_end_to_end.py  test_metrics.py  test_resilience.py
tests/unit/: test_analyzer.py  test_auth.py  test_decision_engine.py  test_distributor.py  test_llm_client.py  test_planner.py  test_security_patch.py
tests/verification/: phase1_test.py  phase2_test.py
